// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Pagination component component renders props correctly, falsy values 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="paginationBlock"
      >
        <button
          class="arrowLeft"
        >
          <img
            alt="Стрелка влево"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
        </button>
        <ul
          class="list"
        >
          <li
            class="item"
          >
            1
          </li>
        </ul>
        <button>
          <img
            alt="Стрелка вправо"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="paginationBlock"
    >
      <button
        class="arrowLeft"
      >
        <img
          alt="Стрелка влево"
          data-nimg="1"
          decoding="async"
          height="24"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="24"
        />
      </button>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          1
        </li>
      </ul>
      <button>
        <img
          alt="Стрелка вправо"
          data-nimg="1"
          decoding="async"
          height="24"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="24"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`test Pagination component component renders props correctly, truthy values 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="paginationBlock"
      >
        <button
          class="arrowLeft"
        >
          <img
            alt="Стрелка влево"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
        </button>
        <ul
          class="list"
        >
          <li
            class="item"
          >
            1
          </li>
          <li
            class="item itemActive"
          >
            2
          </li>
          <li
            class="item"
          >
            3
          </li>
          <li
            class="item"
          >
            4
          </li>
          <li
            class="item"
          >
            5
          </li>
        </ul>
        <button>
          <img
            alt="Стрелка вправо"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
            style="color: transparent;"
            width="24"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="paginationBlock"
    >
      <button
        class="arrowLeft"
      >
        <img
          alt="Стрелка влево"
          data-nimg="1"
          decoding="async"
          height="24"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="24"
        />
      </button>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          1
        </li>
        <li
          class="item itemActive"
        >
          2
        </li>
        <li
          class="item"
        >
          3
        </li>
        <li
          class="item"
        >
          4
        </li>
        <li
          class="item"
        >
          5
        </li>
      </ul>
      <button>
        <img
          alt="Стрелка вправо"
          data-nimg="1"
          decoding="async"
          height="24"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
          style="color: transparent;"
          width="24"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`test Pagination component there are the arrow btns 1`] = `
<button
  class="arrowLeft"
>
  <img
    alt="Стрелка влево"
    data-nimg="1"
    decoding="async"
    height="24"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
    style="color: transparent;"
    width="24"
  />
</button>
`;

exports[`test Pagination component there are the arrow btns 2`] = `
<button>
  <img
    alt="Стрелка вправо"
    data-nimg="1"
    decoding="async"
    height="24"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=48&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=48&q=75 2x"
    style="color: transparent;"
    width="24"
  />
</button>
`;
